--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.8",
+    "express": "^4.16.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
@@ -27,12 +28,14 @@
     "gulp-watch": "^4.3.9",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
+    "path": "^0.12.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "redux": "^3.6.0",
     "sass-loader": "^6.0.3",
+    "serve-static": "^1.13.2",
     "standard": "^10.0.2",
     "webpack": "^2.5.1",
     "webpack-stream": "^3.2.0"
@@ -42,7 +45,6 @@
     "production": "./node_modules/.bin/webpack -p",
     "watch": "gulp",
     "sass": "gulp styles",
-    "start": "npm run watch",
     "js": "gulp webpack"
   },
   "devDependencies": {
